--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,6 @@ production:
   database: novel_app_production
   username: novel_app
   password: <%= ENV['NOVEL_APP_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
