--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "novel_app",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "5.2.1"
+    "@rails/webpacker": "5.2.1",
+    "@splidejs/splide": "^2.4.21"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
